# commaid

./: README.md  justfile
backend/: Cargo.toml
backend/src/: daemon.rs  handler.rs  main.rs  room.rs  server.rs  status.rs
frontend/: eslint.config.js  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: NotificationManager.svelte  room.ts  settings.svelte.ts  status.ts  websocket.svelte.ts
frontend/src/lib/panel/: EditorPanel.svelte  PanelContainer.svelte  PanelTab.svelte  SettingsPanel.svelte  SharePanel.svelte  WelcomePanel.svelte  panel.ts
frontend/src/routes/: +layout.svelte  +page.svelte
