[package]
name = "commaid"
version = "0.1.0"
edition = "2021"

[dependencies]
async-signal = "0.2.10"
axum = "0.7.7"
include_dir = "0.7.4"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
