[package]
name = "commaid"
version = "0.1.0"
edition = "2021"

[dependencies]
async-broadcast = "0.7.2"
async-signal = "0.2.10"
axum = { version = "0.8.1", features = ["json", "ws"] }
include_dir = "0.7.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
